<resources>
    <string name="app_name">Wallet Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="fb_action_edit_title">Edit</string>
    <string name="fb_action_delete_title">Delete</string>
    <string name="tv_accRow_defaultLine1">No Transaction Found</string>
    <string name="navSection1_title">Wallet Management</string>
    <string name="navSection1_item1_title">Wallet Account</string>
    <string name="navSection1_item2_title">Transaction Category</string>
    <string name="navSection1_item3_title">Transaction History</string>
    <string name="navSection1_item4_title">Transaction Report</string>
    <string name="navSection2_title">Data Never Backup Before</string>
    <string name="navSection2_item1_title">Backup Data</string>
    <string name="navSection2_item2_title">App Setting</string>
    <string name="navSection2_item3_title">Sign Out</string>
    <string name="confirmation_dialog_positive_title">Confirm</string>
    <string name="confirmation_dialog_negative_title">Cancel</string>
    <string name="error_message_dialog_title">Something Went Wrong</string>
    <string name="error_message_dialog_message">%s\n\nIf Issue Still Remain Unsolved, Please Contact Us.</string>
    <string name="error_message_dialog_positive_title">OK</string>
    <string name="sign_out_dialog_title">Sign Out Account</string>
    <string name="sign_out_dialog_message">Please Make Sure to Backup Data Before Sign Out. All Pending Backup Process will Remove.</string>
    <string name="iv_login_desc">Image View Login Logo</string>
    <string name="sign_in_loading_message">Signing with Google Account…</string>
    <string name="no_internet_message">Please Make Sure you have connect to Internet Connection.</string>
    <string name="sync_loading_message">Sync Data In Progress…</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="welcome_message">Welcome, %s</string>
    <string name="doubleTabExit_label">Tab Back Again to Exit</string>
    <string name="formatDisplayDateTime">%s (%s)</string>
    <string name="autoBackupFailedMessage">Auto Backup at Background Process Failed.</string>
    <string name="backup_drawerDateTime">Backup at - %s</string>
    <string name="manualBackup_start_message">Backup Data on Background…</string>
    <string name="autoBackup_start_message">Auto-Backup every 15 minutes</string>
    <string name="ab_viewAcc_title">Account List</string>
    <string name="ab_createAcc_title">Create Account</string>
    <string name="createAcc_created_message">Account Created Successfully</string>
    <string name="cd_createAcc_createSubmit_title">Create Account</string>
    <string name="cd_createAcc_createSubmit_desc">Are you confirm to Create this New Account?</string>
    <string name="ab_detailsAcc_title">Account Details</string>
    <string name="detailsAcc_edited_message">Account Details Edited</string>
    <string name="cd_detailsAcc_editSubmit_title">Edit Account Details</string>
    <string name="cd_detailsAcc_editSubmit_desc">Are you confirm to Edit this Account Details?</string>
    <string name="detailsAcc_deleted_message">Account Deleted</string>
    <string name="cd_detailsAcc_deleteSubmit_title">Delete Account</string>
    <string name="cd_detailsAcc_deleteSubmit_desc">Are you confirm to Delete this Account?</string>
    <string name="ab_viewCat_title">Category List</string>
    <string name="ab_createCat_title">Create Category</string>
    <string name="createCat_created_message">Category Created Successfully</string>
    <string name="cd_createCat_createSubmit_title">Create Category</string>
    <string name="cd_createCat_createSubmit_desc">Are you confirm to Create this New Category?</string>
    <string name="ab_detailsCat_title">Category Details</string>
    <string name="detailsCat_edited_message">Category Details Edited</string>
    <string name="cd_detailsCat_editSubmit_title">Edit Category Details</string>
    <string name="cd_detailsCat_editSubmit_desc">Are you confirm to Edit this Category Details?</string>
    <string name="detailsCat_deleted_message">Category Deleted</string>
    <string name="cd_detailsCat_deleteSubmit_title">Delete Category</string>
    <string name="cd_detailsCat_deleteSubmit_desc">Are you confirm to Delete this Category?</string>
    <string name="cd_remarkTrans_deleteSubmit_title">Delete Remark</string>
    <string name="cd_remarkTrans_deleteSubmit_desc">Are you confirm to Delete this Remark?</string>
    <string name="ab_createTrans_title">New Transaction</string>
    <string name="createTrans_created_message">Transaction Created Successfully</string>
    <string name="ab_detailsTrans_title">Transaction Details</string>
    <string name="detailsTrans_edited_message">Transaction Edited</string>
    <string name="cd_detailsTrans_editSubmit_title">Edit Transaction Details</string>
    <string name="cd_detailsTrans_editSubmit_desc">Are you confirm to Edit this Transaction Details?</string>
    <string name="detailsTrans_deleted_message">Transaction Deleted</string>
    <string name="cd_detailsTrans_deleteSubmit_title">Delete Transaction</string>
    <string name="cd_detailsTrans_deleteSubmit_desc">Are you confirm to Delete this Transaction?</string>
    <string name="deletedItem_spinner_label">\u0020(Not Existed/Deleted)</string>
    <string name="ab_historyTrans_title">Transaction History</string>
    <string name="tv_historyTrans_TransCountLabel">Transaction Count(s)</string>
    <string name="tv_historyTrans_TransIncCountLabel">Income Count(s)</string>
    <string name="tv_historyTrans_TransExpCountLabel">Expense Count(s)</string>
    <string name="tv_historyTrans_TotalBalLabel">Total Balance</string>
    <string name="history_exp_labelFormat">%s (- $ %.2f)</string>
    <string name="history_inc_labelFormat">%s (+ $ %.2f)</string>
    <string name="history_totalBal_labelFormat">($) %.2f</string>
    <string name="ab_report_title">Transaction Report</string>
    <string name="tv_countRow_format">Total Count: %d</string>
    <string name="tv_amountRow_format">Total Amount: ($) %.2f</string>
    <string name="tv_reportDialog_title">%s Transaction List</string>
    <string name="mp_barChart_income_title">Income</string>
    <string name="mp_barChart_expense_title">Expense</string>
    <string name="mp_barChart_balance_title">Balance</string>
    <string name="tv_dateSelection_title">Date Selection</string>
    <string name="tv_report_summaryTitle">Summary Report</string>
    <string name="tv_report_transactionTitle">Total Transactions: %d</string>
    <string name="ab_setting_title">Application Setting</string>
    <string name="save_setting_message">App Setting Saved</string>
    <string name="tv_setting_backupSetting_label">Auto Backup Data on Launch App</string>
    <string name="ab_dashboard_title">Dashboard</string>
    <string name="tv_dashboard_recentTransList_title">Recent 10(s) Transaction List</string>
    <string name="tv_transList_datetime_labelFormat">%s, %s (%s)</string>
    <string name="tv_transList_categoryOnly_labelFormat">%s</string>
    <string name="tv_transList_categoryRemark_labelFormat">%s \u2022 %s</string>
    <string name="tv_transList_amount_labelFormat">%s $ %.2f</string>
    <string name="positive_figure_symbol">+</string>
    <string name="negative_figure_symbol">-</string>
    <string name="mp_amount_labelFormat">$ %.2f</string>
    <string name="mp_loading_label">Loading Graph…</string>
    <string name="mp_desc_label">Past 31 Days Expense Transactions Flow</string>
    <string name="cv_loading_label">Loading…</string>
    <string name="backupDataCompleteTitle">Backup Data Completed</string>
    <string name="backupDataCompleteMessage">Your Wallet Tracker Data have Successfully Backup.</string>
    <string name="backupDataCompleteAction">Stop Auto Backup at Background</string>
    <string name="backupDataCompleteName">Wallet Tracker Notification</string>
    <string name="backupDataCompleteDesc">Notification About Wallet Tracker Backup</string>
    <string name="account_name_title">Account Name</string>
    <string name="account_desc_title">Account Description</string>
    <string name="category_type_title">Category Type</string>
    <string name="category_name_title">Category Name</string>
    <string name="amount_required_title">Amount (Required)</string>
    <string name="amount_title">Amount</string>
    <string name="enter_amount_title">Enter Amount</string>
    <string name="remarks_title">Remarks</string>
    <string name="date_title">Date</string>
    <string name="time_title">Time</string>
    <string name="selected_category_title">Selected Category</string>
    <string name="selected_account_title">Selected Account</string>
    <string name="non_deletable_title">(Non-Deletable)</string>
    <string name="amount_loading_label">Loading…</string>
    <string name="amount_error_label">error</string>
    <string name="dateTime_format_string">%s %s</string>
    <string name="accName_empty_invalid_message">Please Enter Account Name</string>
    <string name="accName_minWord_invalid_message">Please Enter At Least 4 and At Most 20 words</string>
    <string name="accName_format_invalid_messagae">Format Invalid, Enter Character Only, Do not End with Space</string>
    <string name="accName_used_invalid_message">Account Name have been already Used</string>
    <string name="accName_databaseError_invalid_message">Account Database error occurred</string>
    <string name="accDescription_empty_invalid_message">Please Enter Account Description</string>
    <string name="catName_empty_invalid_message">Please Enter Category Name</string>
    <string name="catName_minWord_invalid_message">Please Enter At Least 4 and At Most 20 words</string>
    <string name="catName_format_invalid_messagae">Format Invalid, Enter Character Only, Do not End with Space</string>
    <string name="catName_used_invalid_message">Category Name have been already Used</string>
    <string name="catName_databaseError_invalid_message">Category Database error occurred</string>
    <string name="btnPlus_label">+</string>
    <string name="btnMinus_label">-</string>
    <string name="btnMultiply_label">*</string>
    <string name="btnDivide_label">/</string>
    <string name="btn0_label">0</string>
    <string name="btn1_label">1</string>
    <string name="btn2_label">2</string>
    <string name="btn3_label">3</string>
    <string name="btn4_label">4</string>
    <string name="btn5_label">5</string>
    <string name="btn6_label">6</string>
    <string name="btn7_label">7</string>
    <string name="btn8_label">8</string>
    <string name="btn9_label">9</string>
    <string name="btnDot_label">.</string>
    <string name="btnEqual_label">=</string>
    <string name="btnDelete_label">Del</string>
    <string name="btnClear_label">Clear</string>
    <string name="calCustomDialog_label">Transaction Amount</string>
    <string name="notANumber_label">NaN</string>
    <string name="tv_historyFilter_title">History Filter Configuration</string>
    <string name="tv_historyFilter_remark_title">Remarks (Wild Card, Case Insensitive)</string>
    <string name="tv_historyFilter_dateOption_title">Date Filter Option</string>
    <string name="tl_historyFilter_startDate_title">From</string>
    <string name="tl_historyFilter_endDate_title">To</string>
</resources>