<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.transaction.transactionview.CreateTransactionFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/uniquelayouta"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_default_background"
        android:theme="@style/EditTextTheme"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uniquelayoutb">

        <EditText
            android:id="@+id/etinlayouta"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:completionThreshold="1"
            android:focusable="false"
            android:hint="@string/amount_title"
            android:inputType="text"
            android:padding="@dimen/keyline_1_minus_8dp"
            android:singleLine="true"
            android:text="@string/enter_amount_title"
            android:textAlignment="center"
            android:textColor="@color/colorLightRed"
            android:textSize="36sp"
            android:theme="@style/EditTextTheme"
            tools:ignore="Autofill" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/uniquelayoutb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_default_background"
        android:theme="@style/EditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner3">

        <AutoCompleteTextView
            android:id="@+id/etInlayoutb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:completionThreshold="1"
            android:hint="@string/remarks_title"
            android:imeOptions="actionDone"
            android:padding="@dimen/keyline_1_minus_8dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:theme="@style/EditTextTheme" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/uniquelayoutc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_default_background"
        android:theme="@style/EditTextTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/uniqueInlayoutd"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/etInlayoutc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:completionThreshold="1"
            android:hint="@string/date_title"
            android:imeOptions="actionNext"
            android:inputType="date"
            android:padding="@dimen/keyline_1_minus_8dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:theme="@style/EditTextTheme"
            tools:ignore="Autofill" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/uniqueInlayoutd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_default_background"
        android:theme="@style/EditTextTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton6"
        app:layout_constraintStart_toEndOf="@+id/uniquelayoutc">

        <EditText
            android:id="@+id/etInlayputd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:completionThreshold="1"
            android:hint="@string/time_title"
            android:imeOptions="actionNext"
            android:inputType="time"
            android:padding="@dimen/keyline_1_minus_8dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:theme="@style/EditTextTheme"
            tools:ignore="Autofill" />

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_default_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="6dp"
        android:text="@string/selected_category_title"
        app:layout_constraintEnd_toStartOf="@+id/spinner3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.kyleduo.switchbutton.SwitchButton
        android:id="@+id/switchbobo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="16dp"
        android:checked="true"
        app:kswBackColor="@color/colorLightRed"
        app:kswThumbColor="@color/colorPrimaryDark"
        app:kswThumbWidth="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/texttype"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/custom_default_background"
        android:paddingLeft="4dp"
        android:paddingTop="2dp"
        android:paddingRight="4dp"
        android:text="@string/expense_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/switchbobo"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/category_type_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:text="@string/selected_account_title"
        app:layout_constraintEnd_toStartOf="@+id/spinner2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_default_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_check"
        app:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>